--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 50px;
+      max-width: 500px;
+      margin: 50px auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    input, button {
+    input[type="text"] {
+      width: 100%;
       padding: 10px;
-      font-size: 16px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    button {
+      padding: 10px 15px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0056b3;
     }
     #result {
       margin-top: 20px;
@@ -19,17 +38,17 @@
   </style>
 </head>
 <body>
-  <h1>URL Shortener</h1>
-  <input type="text" id="urlInput" placeholder="Enter your long URL" size="50">
-  <button onclick="shortenURL()">Shorten</button>
 
+  <h2>Shorten a URL</h2>
+  <input type="text" id="urlInput" placeholder="Enter a long URL...">
+  <button onclick="shorten()">Shorten</button>
   <div id="result"></div>
 
   <script>
-    async function shortenURL() {
+    async function shorten() {
       const url = document.getElementById("urlInput").value;
-      const resultDiv = document.getElementById("result");
-      resultDiv.textContent = "Processing...";
+      const resultEl = document.getElementById("result");
+      resultEl.innerText = "Processing...";
 
       try {
         const response = await fetch("https://jztu3lv469.execute-api.us-east-1.amazonaws.com/prod/", {
@@ -37,20 +56,22 @@
           headers: {
             "Content-Type": "application/json"
           },
-          body: JSON.stringify({ url: url })
+          body: JSON.stringify({ url })
         });
 
-        const data = await response.json();
-
-        if (response.ok) {
-          resultDiv.innerHTML = `Short URL: <a href="${data.short_url}" target="_blank">${data.short_url}</a>`;
-        } else {
-          resultDiv.textContent = `Error: ${data.error || 'Something went wrong'}`;
+        if (!response.ok) {
+          throw new Error("Failed to shorten URL. Server returned status " + response.status);
         }
-      } catch (err) {
-        resultDiv.textContent = `Error: ${err.message}`;
+
+        const raw = await response.json();      // { body: '{"short_url":"..."}' }
+        const data = JSON.parse(raw.body);      // Convert string body into JSON
+
+        resultEl.innerHTML = `Short URL: <a href="${data.short_url}" target="_blank">${data.short_url}</a>`;
+      } catch (error) {
+        resultEl.innerText = "Error: " + error.message;
       }
     }
   </script>
+
 </body>
 </html>
