--- a/index.html
+++ b/index.html
@@ -45,32 +45,35 @@
   <div id="result"></div>
 
   <script>
-    async function shorten() {
-      const url = document.getElementById("urlInput").value;
-      const resultEl = document.getElementById("result");
-      resultEl.innerText = "Processing...";
+     async function shorten() {
+  const url = document.getElementById("urlInput").value;
+  const resultEl = document.getElementById("result");
+  resultEl.innerText = "Processing...";
 
-      try {
-        const response = await fetch("https://jztu3lv469.execute-api.us-east-1.amazonaws.com/prod/", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ url })
-        });
+  try {
+    const response = await fetch("https://jztu3lv469.execute-api.us-east-1.amazonaws.com/prod/", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({ url })
+    });
 
-        if (!response.ok) {
-          throw new Error("Failed to shorten URL. Server returned status " + response.status);
-        }
+    const responseText = await response.text();  // Get raw text
+    const parsed = JSON.parse(responseText);     // Should be { body: '{ "short_url": ... }' }
 
-        const raw = await response.json();      // { body: '{"short_url":"..."}' }
-        const data = JSON.parse(raw.body);      // Convert string body into JSON
+    const data = typeof parsed.body === "string" ? JSON.parse(parsed.body) : parsed.body;
 
-        resultEl.innerHTML = `Short URL: <a href="${data.short_url}" target="_blank">${data.short_url}</a>`;
-      } catch (error) {
-        resultEl.innerText = "Error: " + error.message;
-      }
+    if (data.short_url) {
+      resultEl.innerHTML = `Short URL: <a href="${data.short_url}" target="_blank">${data.short_url}</a>`;
+    } else {
+      resultEl.innerText = "Error: short_url not returned by Lambda.";
     }
+
+  } catch (error) {
+    resultEl.innerText = "Error: " + error.message;
+  }
+}
   </script>
 
 </body>
